Convert toMany usages to flux